# enumerio

./: Makefile  README.md  pyproject.toml
src/enumerio/: __init__.py  core.py  option.py  result.py  smarter_lambda.py
test/: test_enum.py
