[project]
name = "enumerio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "samedit66", email = "samedit66@yandex.ru" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
